--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
