--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/drizzle"
+    "src/db"
   ],
   "exclude": ["node_modules"]
 }
