--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@vercel/postgres": "^0.9.0",
     "drizzle-orm": "^0.32.0",
+    "lodash": "^4.17.21",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.52.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
