--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "generate": "drizzle-kit generate",
-    "migrate": "drizzle-kit migrate"
+    "migrate": "drizzle-kit migrate",
+    "seed": "npx ts-node src/db/seeds/seed-db.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.1",
