--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.1",
     "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
     "@next/env": "^14.2.5",
     "@tailwindcss/typography": "^0.5.13",
     "@vercel/postgres": "^0.9.0",
