--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.1.5",
     "@next/env": "^14.2.5",
     "@tailwindcss/typography": "^0.5.13",
+    "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.9.0",
     "drizzle-orm": "^0.32.0",
     "lodash": "^4.17.21",
@@ -26,13 +27,15 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1"
+    "react-hook-form": "^7.52.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.23.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
