--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@next/env": "^14.2.5",
+    "@react-pdf/renderer": "^3.4.4",
     "@tailwindcss/typography": "^0.5.13",
     "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.9.0",
@@ -28,6 +29,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "sharp": "^0.33.4",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
