add tsconfig-paths and react-tooltip

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "generate": "drizzle-kit generate",
     "migrate": "drizzle-kit migrate",
-    "seed": "npx ts-node src/db/seeds/seed-db.ts"
+    "seed": "npx ts-node -r tsconfig-paths/register src/db/seeds/seed-db.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.4.1",
@@ -28,6 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-tooltip": "^5.27.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.3"
   }
 }
