--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@auth/drizzle-adapter": "^1.4.1",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.0",
     "@next/env": "^14.2.5",
     "@tailwindcss/typography": "^0.5.13",
     "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.9.0",
     "drizzle-orm": "^0.32.0",
     "lodash": "^4.17.21",
+    "nanoid": "^5.0.7",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
@@ -29,7 +31,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-tooltip": "^5.27.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
