--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.10",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
