--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,22 @@ services:
       start_period: 30s
       timeout: 5s
 
+  docuseal:
+    depends_on:
+      postgres:
+        condition: service_healthy
+        restart: true
+    image: docuseal/docuseal:latest
+    ports:
+      - 3333:3000
+    volumes:
+      - .:/data
+    # environment:
+    #   - FORCE_SSL=${HOST}
+    #   - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/docuseal
+    env_file:
+      - .env.development.local
+
   adminer:
     image: adminer
     restart: always
