--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@next/env": "^14.2.5",
     "@tailwindcss/typography": "^0.5.13",
+    "@uiw/react-heat-map": "^2.2.2",
     "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.9.0",
     "drizzle-orm": "^0.32.0",
